--- a/Cocoon/packages.config
+++ b/Cocoon/packages.config
@@ -51,6 +51,8 @@
   <package id="PushSharp" version="4.0.10" targetFramework="net472" />
   <package id="QRCoder" version="1.6.0" targetFramework="net48" />
   <package id="Quartz" version="3.2.3" targetFramework="net472" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net48" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
